--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .row {
-  width: 992px;
+  /* width: 992px; */
   margin-left: auto;
   margin-right: auto;
   margin-top: 100px;
@@ -70,4 +70,61 @@ img {
 
 .clear {
   clear: both;
+}
+
+/* QUERY */
+
+/* tablet */
+
+
+/* smartphone */
+@media screen and (max-width: 420px){
+  *{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+  /* lezioni */
+  #lezioni > div{
+    background-color: #f2f2cd;
+  }
+  #lezioni .row>.left,
+  #lezioni .row>.right {
+  width: 100%;
+  }
+  #lezioni > div > :nth-child(3){
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  /* steps */
+  #steps .row>.left,
+  #steps .row>.central,
+  #steps .row>.right {
+  width: 100%;
+  padding-top: 10px;
+  }
+
+  /* why */
+  #why > div{
+    background-color: #f2f2cd;
+  }
+  #why .row>.first,
+  #why .row>.second,
+  #why .row>.third {
+  margin-top: 20px;
+  }
+  #why .row img {
+    padding: 20px
+  }
+
+  /* common */
+  img {
+    height: 80px;
+  }
+  .row{
+    margin-top: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
 }
